# glycansolver

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/glycansolver/: __init__.py  biosynthetic.py  block_dependencies.py  block_init.py  cli.py  diagnostics.py  solve_progressive.py  usage_counter.py  utils.py  web.py
src/glycansolver/data/: blocks.txt  example.txt  labels.txt
src/glycansolver/templates/: index.html
