[build-system]
requires = [
    "setuptools>=69",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "glycansolver"
version = "0.7.5"
description = "Mass spectra solver built for glycomics"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cvxpy>=1.7.5",
    "flask>=3.1.3",
    "gurobipy>=13.0.1",
    "numpy>=2.4.2",
    "gunicorn>=25.1.0",
    "scipy>=1.15.0",
]
authors = [
    {name = "Lukasz Sobala", email = "lukasz.sobala@hirszfeld.pl"},
    {name = "Mateusz Kozak"}
]

[project.scripts]
glycansolver = "glycansolver.cli:cli"
glycansolver-web = "glycansolver.web:run_web"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
glycansolver = ["data/*", "templates/*"]

